--- a/frontend/src/css/base.css
+++ b/frontend/src/css/base.css
@@ -102,5 +102,8 @@ button {
 
 :root {
   --color-alert-red : #EE5B5B;
+  --color-111: #111;
+  --color-333: #333;
+  --color-666: #666;
   --color-aaa: #aaa;
 }
