--- a/frontend/src/common/import.css
+++ b/frontend/src/common/import.css
@@ -4,9 +4,9 @@
 @tailwind utilities;
 
 /* 기본 설정 (리셋, 변수) */
-@import "../css/reset.css";
-@import "../css/base.css";
+@import "./css/reset.css";
+@import "./css/base.css";
 
 /* @apply를 사용하는 커스텀 모듈 */
-@import "../css/layout.css";
-@import "../css/modules.css";
+@import "./css/layout.css";
+@import "./css/modules.css";
