--- a/frontend/src/css/base.css
+++ b/frontend/src/css/base.css
@@ -59,7 +59,7 @@ a {
 }
 
 .container {
-  @apply max-w-[1280px] mx-auto py-8 min-h-[calc(100vh-120px)] box-border;
+  @apply max-w-[1280px] py-8 mx-auto min-h-[calc(100vh-120px)] box-border;
 }
 
 .box-sizing {
@@ -68,7 +68,7 @@ a {
 
 /* Colors */
 .color-main {
-  @apply text-[#b17576];
+  @apply text-[#111];
 }
 .color-fff {
   @apply text-white;
@@ -149,14 +149,14 @@ a {
 }
 
 .error-message {
-  @apply text-[#b17576] text-sm mb-[10px] text-center;
+  @apply text-[#111] text-sm mb-[10px] text-center;
 }
 
 .hover {
   @apply transition-colors duration-200 cursor-pointer whitespace-nowrap;
 }
 .hover:hover {
-  @apply text-[#b17576];
+  @apply text-[#111];
 }
 
 /* Legacy Utilities Removed */
