--- a/frontend/src/css/modules.css
+++ b/frontend/src/css/modules.css
@@ -1,7 +1,7 @@
 /* @import "../css/base.css"; */
 
 .containerr {
-  @apply w-[1280px] max-w-[1280px] py-8 mx-auto min-h-[calc(100vh-120px)] box-border;
+  @apply w-full max-w-[1280px] py-8 mx-auto min-h-[calc(100vh-120px)] box-border;
 }
 
 /* Header.tsx */
